--- a/laba2/laba2/laba2.vcxproj
+++ b/laba2/laba2/laba2.vcxproj
@@ -147,7 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="laba2.cpp" />
+    <ClCompile Include="laba2.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
