--- a/laba2/laba2/laba2.vcxproj.filters
+++ b/laba2/laba2/laba2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="laba2.cpp">
+    <ClCompile Include="laba2.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
