--- a/laba3a/laba3a/laba3a.vcxproj
+++ b/laba3a/laba3a/laba3a.vcxproj
@@ -151,7 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="laba3a.cpp" />
+    <ClCompile Include="laba3a.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
