--- a/laba3a/laba3a/laba3a.vcxproj.filters
+++ b/laba3a/laba3a/laba3a.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="laba3a.cpp">
+    <ClCompile Include="laba3a.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
